# crucible

./: .gitignore  CLAUDE.md  pyproject.toml  readme.org
.crucible/: .gitignore  CLAUDE.md  references.bib
.crucible/sources/notebooks/: test-notebook-entry.org
.crucible/wiki/: MANIFEST.md  viz.html
.crucible/wiki/comparisons/: arrhenius-validation-on-platinum.org
docs/: architecture.org  commands.org  skill.org  tutorial.org
example/: CLAUDE.md
example/.crucible/wiki/: MANIFEST.md
skill/: SKILL.md
src/crucible/: browse.py  cli.py  database.py  embeddings.py  ingest.py  orgparse.py  registry.py
src/crucible/skill/: SKILL.md
wiki/: .org-publish.json  MANIFEST.md  index.org
wiki/concepts/: activation-energy.org
wiki/summaries/: test-notebook-entry.org
