[project]
name = "crucible"
version = "0.1.0"
description = "LLM-compiled knowledge base with org-mode wiki and graph database"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "filelock>=3.0",
    "libsql>=0.1.0",
]

[project.scripts]
crucible = "crucible.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]
